# floripatalks

./: .cursorrules  .deployment  .env.example  .gitignore  .gitmessage  .gitmessage-template  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  justfile  main.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  startup.sh
.cursor/: settings.json
.cursor/commands/: speckit.plan.md
.cursor/rules/: specify-rules.mdc
.github/: azure-deploy.yml
.github/workflows/: ci.yml  main_floripatalks-app.yml  test.yml
.specify/memory/: constitution.md
accounts/: admin.py  models.py  urls.py
accounts/cotton/: README.md
accounts/migrations/: 0001_initial.py
accounts/templates/account/: base_manage.html  login.html  signup.html
accounts/templates/accounts/: login_popup.html
core/: adapter.py  admin.py  choices.py  decorators.py  middleware.py  models.py  utils.py  views.py
core/migrations/: 0001_initial.py  0001_test_models.py  0002_alter_appuser_avatar_alter_appuser_date_of_birth_and_more.py  0002_create_default_site.py  0003_delete_concretebasemodel_and_more.py
core/services/: talk_services.py
core/templates/admin/: login.html
core/templates/core/: home.html
core/templatetags/: __init__.py  core_tags.py
core/tests/: conftest.py  test_talk_services.py
docs/: 301-redirect-fix-explanation.md  301-redirect-issue-summary.md  azure-best-practices-compliance.md  azure-cicd-setup-explained.md  azure-deployment-guide.md  azure-deployment-tldr.md  azure-django-shell-access.md  azure-expert-audit-report.md  oauth-setup-instructions.md  speckit-guide.md  testing-google-sso.md
events/: admin.py  forms.py  models.py  urls.py  views.py
events/cotton/: README.md
events/dto/: __init__.py  topic_dto.py
events/migrations/: 0001_initial.py  0002_topic.py  0003_seed_initial_data.py  0004_remove_vote_count_field.py  0005_vote.py
events/services/: __init__.py  topic_service.py  vote_service.py
events/templates/cotton/topic/: card.html  vote_button.html
events/templates/events/: event_detail.html  topic_edit.html  topic_form.html
events/templates/events/partials/: inline_topic_form.html  topic_item.html  topic_list_fragment.html  vote_button.html
events/use_cases/: create_topic.py  delete_topic.py  edit_topic.py  get_event_topics.py  unvote_topic.py  vote_topic.py
floripatalks/: asgi.py  settings.py  urls.py  wsgi.py
floripatalks/settings/: __init__.py  base.py  development.py  production.py  test.py
locale/pt_BR/LC_MESSAGES/: django.po
specs/001-event-topics-platform/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-event-topics-platform/checklists/: requirements.md
specs/001-event-topics-platform/contracts/: htmx-views.md
static/css/pure-css/: pure-min.css
static/js/: htmx.min.js
templates/: base.html  home.html
templates/account/: base.html  login.html  logout.html  signup.html
templates/socialaccount/: login.html
templates/socialaccount/snippets/: login.html  provider_list.html
tests/: conftest.py
tests/integration/accounts/: test_signin_popup.py
tests/integration/events/: __init__.py  test_browser_navigation.py  test_event_detail_view.py  test_readonly_experience.py  test_topic_creation.py  test_topic_delete.py  test_topic_edit.py  test_vote_flow.py
tests/unit/accounts/: test_models.py
tests/unit/core/: test_models.py  test_utils.py
tests/unit/events/: test_models.py
tests/unit/events/test_dto/: __init__.py  test_topic_dto.py
tests/unit/events/test_services/: __init__.py  test_topic_service.py  test_topic_service_vote_status.py  test_vote_service.py
tests/unit/events/test_use_cases/: __init__.py  test_create_topic.py  test_delete_topic.py  test_edit_topic.py  test_get_event_topics.py  test_unvote_topic.py  test_vote_topic.py
zsh/.atuin/: config.ini
zsh/.atuin/templates/: blank.md.template  challenge.html.template  challenge.md.template  random.py.template
