[project]
name = "floripatalks"
version = "0.1.0"
description = "Event topics platform for local Python community events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-cotton>=2.5.1",
    "django-htmx>=1.27.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "requests>=2.32.5",
    "pyjwt>=2.10.1",
    "cryptography>=46.0.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type annotations)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "F403",  # star imports (common in Django settings)
    "F405",  # undefined names from star imports (common in Django settings)
]

[tool.ruff.lint.isort]
known-first-party = ["floripatalks", "events", "accounts", "core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["floripatalks", "events", "accounts", "core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "floripatalks.settings.development"
python_files = ["tests.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
