[project]
name = "floripatalks"
version = "0.1.0"
description = "Event topics platform for local Python community events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-cotton>=2.5.1",
    "django-htmx>=1.27.0",
    "requests>=2.32.5",
    "pyjwt>=2.10.1",
    "cryptography>=46.0.3",
    "uuid6>=2025.0.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.5.0", "ruff>=0.8.4"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "*.md",  # Exclude markdown files
    "*.mdx",  # Exclude MDX files
    ".venv",
    ".git",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (includes E402: module level import not at top of file)
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type annotations)
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "F403", # star imports (common in Django settings)
    "F405", # undefined names from star imports (common in Django settings)
]

# Per-file ignores: Django migrations use dynamic types and have specific signatures
# E402 is enforced: module-level imports MUST be at top of file
[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = [
    "ANN001", # Missing type annotation for function argument (apps, schema_editor are Django types)
    "ANN401", # Dynamically typed expressions (apps.get_model returns dynamic types)
    "ARG001", # Unused function argument (schema_editor may not be used in data migrations)
]
"tests/**/*.py" = [
    "ANN001", # Missing type annotation for function argument (test fixtures and parameters)
    "ANN201", # Missing return type annotation for public function (test functions)
    "ANN204", # Missing return type annotation for special method (test fixtures)
]

[tool.ruff.lint.isort]
known-first-party = ["floripatalks", "events", "accounts", "core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["floripatalks", "events", "accounts", "core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "floripatalks.settings.test"
python_files = ["tests.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "faker>=38.2.0",
    "model-bakery>=1.20.5",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
